--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Website</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="app-container">
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="profile-section">
-                <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
+                <img src="/public/images/profile.jpg" alt="Profile Picture" class="profile-pic" onerror="this.style.display='none'">
                 <h2>Your Name</h2>
                 <p>Web Developer</p>
             </div>
@@ -91,6 +91,6 @@
         </main>
     </div>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="/public/js/main.js" type="module"></script>
 </body>
 </html>
