--- a/index.html
+++ b/index.html
@@ -11,50 +11,54 @@
     <div class="app-container">
         <!-- Sidebar -->
         <aside class="sidebar">
-            <div class="profile-section">
-                <img src="/images/profile.jpg" alt="Profile Picture" class="profile-pic" onerror="this.style.display='none'">
-                <h2>Your Name</h2>
-                <p>Web Developer</p>
+            <div class="sidebar-content">
+                <div class="profile-section">
+                    <img src="/images/profile.jpg" alt="Profile Picture" class="profile-pic" onerror="this.style.display='none'">
+                    <h2>Your Name</h2>
+                    <p>Web Developer</p>
+                </div>
+                <nav class="nav-menu">
+                    <ul>
+                        <li><a href="#home" class="nav-link active" data-page="home"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="#about" class="nav-link" data-page="about"><i class="fas fa-user"></i> About</a></li>
+                        <li><a href="#resume" class="nav-link" data-page="resume"><i class="fas fa-file-alt"></i> Resume</a></li>
+                        <li><a href="#portfolio" class="nav-link" data-page="portfolio"><i class="fas fa-briefcase"></i> Portfolio</a></li>
+                        <li><a href="#blog" class="nav-link" data-page="blog"><i class="fas fa-blog"></i> Blog</a></li>
+                        <li><a href="#projects" class="nav-link" data-page="projects"><i class="fas fa-code"></i> Projects</a></li>
+                        <li><a href="#contact" class="nav-link" data-page="contact"><i class="fas fa-envelope"></i> Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="nav-menu">
-                <ul>
-                    <li><a href="#home" class="nav-link active" data-page="home"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="#about" class="nav-link" data-page="about"><i class="fas fa-user"></i> About</a></li>
-                    <li><a href="#resume" class="nav-link" data-page="resume"><i class="fas fa-file-alt"></i> Resume</a></li>
-                    <li><a href="#portfolio" class="nav-link" data-page="portfolio"><i class="fas fa-briefcase"></i> Portfolio</a></li>
-                    <li><a href="#blog" class="nav-link" data-page="blog"><i class="fas fa-blog"></i> Blog</a></li>
-                    <li><a href="#projects" class="nav-link" data-page="projects"><i class="fas fa-code"></i> Projects</a></li>
-                    <li><a href="#contact" class="nav-link" data-page="contact"><i class="fas fa-envelope"></i> Contact</a></li>
-                </ul>
-            </nav>
-            <div class="theme-toggle">
-                <i class="fas fa-moon"></i>
-                <label class="switch">
-                    <input type="checkbox" id="theme-switch">
-                    <span class="slider round"></span>
-                </label>
-                <i class="fas fa-sun"></i>
+
+            <!-- Terminal Section -->
+            <div class="terminal-container">
+                <div class="terminal-header">
+                    <h3>Terminal</h3>
+                    <button class="terminal-toggle" aria-label="Toggle Terminal">
+                        <i class="fas fa-terminal"></i>
+                    </button>
+                </div>
+                <div id="terminal" class="terminal">
+                    <div class="terminal-content">
+                        <div class="terminal-line">Welcome to the terminal! Type 'help' for available commands.</div>
+                    </div>
+                    <div class="terminal-input">
+                        <span class="prompt">$</span>
+                        <input type="text" class="command-input" placeholder="Type 'help' for commands">
+                    </div>
+                </div>
             </div>
         </aside>
 
         <!-- Main Content -->
         <main class="main-content">
-            <div id="terminal-toggle" class="terminal-toggle">
-                <i class="fas fa-terminal"></i>
+            <!-- Page content will be loaded here -->
+            <div id="page-content" class="page-content">
+                <!-- Content will be loaded here dynamically -->
             </div>
-            
-            <!-- Terminal -->
-            <div id="terminal" class="terminal">
-                <div class="terminal-header">
-                    <div class="terminal-buttons">
-                        <span class="terminal-btn close"></span>
-                        <span class="terminal-btn minimize"></span>
-                        <span class="terminal-btn maximize"></span>
-                    </div>
-                    <div class="terminal-title">Terminal</div>
-                </div>
-                <div class="terminal-body">
-                    <div class="terminal-content">
+            <button id="chatbot-toggle" class="chatbot-toggle">
+                <i class="fas fa-robot"></i>
+            </button>
                         <p>Welcome to my personal website! Type 'help' to see available commands.</p>
                         <div class="terminal-line">
                             <span class="prompt">visitor@portfolio:~$</span>
