--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 </div>
                 <nav class="nav-menu">
                     <ul>
-                        <li><a href="#home" class="nav-link active" data-page="home"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="#about" class="nav-link" data-page="about"><i class="fas fa-user"></i> About</a></li>
-                        <li><a href="#resume" class="nav-link" data-page="resume"><i class="fas fa-file-alt"></i> Resume</a></li>
-                        <li><a href="#portfolio" class="nav-link" data-page="portfolio"><i class="fas fa-briefcase"></i> Portfolio</a></li>
-                        <li><a href="#blog" class="nav-link" data-page="blog"><i class="fas fa-blog"></i> Blog</a></li>
-                        <li><a href="#projects" class="nav-link" data-page="projects"><i class="fas fa-code"></i> Projects</a></li>
-                        <li><a href="#contact" class="nav-link" data-page="contact"><i class="fas fa-envelope"></i> Contact</a></li>
-                        <li><a href="#terminal" class="nav-link" data-page="terminal"><i class="fas fa-terminal"></i> Terminal</a></li>
+                        <li><a href="/" class="nav-link active" data-page=""><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="/about/" class="nav-link" data-page="about"><i class="fas fa-user"></i> About</a></li>
+                        <li><a href="/resume/" class="nav-link" data-page="resume"><i class="fas fa-file-alt"></i> Resume</a></li>
+                        <li><a href="/portfolio/" class="nav-link" data-page="portfolio"><i class="fas fa-briefcase"></i> Portfolio</a></li>
+                        <li><a href="/blog/" class="nav-link" data-page="blog"><i class="fas fa-blog"></i> Blog</a></li>
+                        <li><a href="/projects/" class="nav-link" data-page="projects"><i class="fas fa-code"></i> Projects</a></li>
+                        <li><a href="/contact/" class="nav-link" data-page="contact"><i class="fas fa-envelope"></i> Contact</a></li>
+                        <li><a href="/terminal/" class="nav-link" data-page="terminal"><i class="fas fa-terminal"></i> Terminal</a></li>
                     </ul>
                 </nav>
             </div>
@@ -36,7 +36,7 @@
         <main class="main-content">
             <!-- Page content will be loaded here -->
             <div id="page-content" class="page-content">
-                <!-- Include home page content directly -->
+                <!-- Home page content -->
                 <div class="home-page">
                     <h1>Welcome to My Personal Website</h1>
                     <p>Hello! I'm a web developer passionate about creating beautiful and functional websites.</p>
