--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
         </main>
     </div>
 
-    <script src="/js/main.js" type="module"></script>
+    <!-- Theme Toggle -->
+    <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="theme-switch">
+            <input type="checkbox" id="theme-switch" />
+            <div class="slider round"></div>
+        </label>
+        <span>Dark Mode</span>
+    </div>
+
+    <script src="/js/main.js"></script>
 </body>
 </html>
