--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
                         <li><a href="/terminal/" class="nav-link" data-page="terminal"><i class="fas fa-terminal"></i> Terminal</a></li>
                     </ul>
                 </nav>
+                <div class="theme-switch-wrapper">
+                    <label class="theme-switch" for="theme-switch">
+                        <input type="checkbox" id="theme-switch" />
+                        <div class="slider round"></div>
+                    </label>
+                    <span id="theme-text">Dark Mode</span>
+                </div>
             </div>
         </aside>
 
@@ -91,15 +98,6 @@
                 </div>
             </div>
         </main>
-    </div>
-
-    <!-- Theme Toggle -->
-    <div class="theme-switch-wrapper">
-        <label class="theme-switch" for="theme-switch">
-            <input type="checkbox" id="theme-switch" />
-            <div class="slider round"></div>
-        </label>
-        <span>Dark Mode</span>
     </div>
 
     <script src="/js/main.js"></script>
