--- a/index.html
+++ b/index.html
@@ -43,34 +43,12 @@
         <main class="main-content">
             <!-- Page content will be loaded here -->
             <div id="page-content" class="page-content">
-                <!-- Content will be loaded here dynamically -->
+                <!-- Loading state -->
                 <div class="loading">Loading...</div>
-            </div>
-            
-            <!-- Chatbot Toggle Button -->
-            <button id="chatbot-toggle" class="chatbot-toggle">
-                <i class="fas fa-robot"></i>
-            </button>
-
-            <!-- Chatbot -->
-            <div id="chatbot" class="chatbot">
-                <div class="chatbot-header">
-                    <span>AI Assistant</span>
-                    <button class="chatbot-close">×</button>
-                </div>
-                <div class="chatbot-messages" id="chat-messages">
-                    <div class="message bot">
-                        <p>Hello! I'm your personal AI assistant. How can I help you today?</p>
-                    </div>
-                </div>
-                <div class="chatbot-input">
-                    <input type="text" id="user-input" placeholder="Ask me anything...">
-                    <button id="send-btn"><i class="fas fa-paper-plane"></i></button>
-                </div>
             </div>
         </main>
     </div>
 
-    <script src="/js/main.js"></script>
+    <script src="/js/main-new.js"></script>
 </body>
 </html>
