--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         </main>
     </div>
 
-    <script src="/js/main-new.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
